--- a/PuzzleGame/Views/PuzzleGamePage.xaml
+++ b/PuzzleGame/Views/PuzzleGamePage.xaml
@@ -5,12 +5,15 @@
              Title="PuzzleGamePage">
     <ContentPage.Content>
         <StackLayout Padding="20">
-            <Label x:Name="movesLabel" Text="Movimentos: 0" FontSize="Large" HorizontalOptions="Center" />
-            <Label x:Name="timeLabel" Text="Tempo: 0 segundos" FontSize="Large" HorizontalOptions="Center" />
+            <Label x:Name="levelLabel" Text="Nível: 1" FontSize="18" HorizontalOptions="CenterAndExpand" />
+            <Label x:Name="movesLabel" Text="Movimentos: 0" FontSize="18" HorizontalOptions="CenterAndExpand" />
+            <Label x:Name="movesLimit" Text="Limite de Movimentos: 0" FontSize="18" HorizontalOptions="CenterAndExpand" />
+            <!--<Label x:Name="timeLabel" Text="Tempo: 0 segundos" FontSize="Large" HorizontalOptions="Center" />-->
             <Grid x:Name="puzzleGrid" Margin="10" RowSpacing="2" ColumnSpacing="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                 <!-- Os botões representando as peças do quebra-cabeça serão adicionados aqui dinamicamente -->
             </Grid>
-            <Button Text="Reiniciar" Clicked="RestartButton_Clicked" />
+            <Button Text="Embaralhar" Clicked="RestartButton_Clicked" />
+            <Button Text="Teste" Clicked="TesteClick" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
